# internal/handlers/handlers.go
@@ -1,10 +1,13 @@
 package handlers
 
 import (
+	"23-7-2025/internal/business/apperrors"
 	"23-7-2025/internal/business/services"
+	"errors"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	"github.com/swaggo/echo-swagger"
+	"net/http"
 )
 
 type Handlers struct {
@@ -13,7 +16,7 @@ type Handlers struct {
 
 func New(s *services.Services) *Handlers {
 	return &Handlers{
-		Tasks: &TasksHandler{taskService: s.Task},
+		Tasks: NewTasksHandler(s.Task, s.ArchiveService),
 	}
 }
 
@@ -21,6 +24,38 @@ func SetDefault(e *echo.Echo) {
 	e.Static("/", "static")
 	e.GET("/healthcheck", HealthCheckHandler)
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	e.HTTPErrorHandler = errorHandler()
+}
+
+func errorHandler() func(err error, c echo.Context) {
+	return func(err error, c echo.Context) {
+		c.Logger().Error(err)
+		if c.Response().Committed {
+			return
+		}
+		var httpErr *echo.HTTPError
+		if errors.As(err, &httpErr) {
+			return
+		}
+
+		var appErr *apperrors.AppError
+		if errors.As(err, &appErr) {
+			sendError(c, http.StatusBadRequest, appErr.Msg)
+			return
+		}
+		var notFoundErr *apperrors.NotFoundError
+		if errors.As(err, &notFoundErr) {
+			sendError(c, http.StatusNotFound, notFoundErr.Msg)
+			return
+		}
+		var busyErr *apperrors.ServerBusyError
+		if errors.As(err, &busyErr) {
+			sendError(c, http.StatusServiceUnavailable, "servery busy")
+			return
+		}
+
+		sendError(c, http.StatusInternalServerError, "Internal server error")
+	}
 }
 
 func SetAPI(e *echo.Echo, h *Handlers) {
@@ -31,6 +66,8 @@ func SetAPI(e *echo.Echo, h *Handlers) {
 	g.POST("/tasks", h.Tasks.CreateTask)
 
 	g.POST("/tasks/:id/resources", h.Tasks.AddResource)
+
+	g.GET("/tasks/:id/archive", h.Tasks.GetArchive)
 }
 
 func Echo() *echo.Echo {
@@ -47,4 +84,8 @@ func Echo() *echo.Echo {
 	)
 
 	return e
+}
+
+func sendError(c echo.Context, code int, msg string) {
+	c.JSON(code, map[string]string{"error": msg})
 }
